--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -76,42 +76,49 @@
 
                 <h3>Trips:</h3>
                 <form th:id="'tripsForm'+${card[0].getId()}" method="get" action="/user_request">
-                <table border="1" cellpadding="5">
-                    <thead>
+                    <table border="1" cellpadding="5">
+                        <thead>
                         <td>Start date and time</td>
                         <td>Free spots</td>
                         <td>Instructors</td>
                         <td>Get choice</td>
-                    </thead>
-                    <th:block th:each="trip : ${card[1]}">
-                        <tr>
-                            <td th:text="${trip.getArriveDate()}"></td>
-                            <td th:text="${trip.getFreeSpots()}"></td>
-                            <td>
-                                <span th:text="${trip.getInstructors().get('main')}"></span><br>
-                                <span th:text="${trip.getInstructors().get('helper')}"></span>
-                            </td>
-                            <td><input id="checkboxTrip" type="checkbox" name="checkbox" th:value="${trip.getId()}"/></td>
-                        </tr>
-                    </th:block>
-                </table>
+                        </thead>
+                        <th:block th:each="trip : ${card[1]}">
+                            <tr>
+                                <td th:text="${trip.getArriveDate().toLocalDate()} + ' ' + ${trip.getArriveDate().toLocalTime()}"></td>
+                                <td th:text="${trip.getFreeSpots()}"></td>
+                                <td>
+                                    <span th:text="${trip.getInstructors().get('main')}"></span><br>
+                                    <span th:text="${trip.getInstructors().get('helper')}"></span>
+                                </td>
+                                <td><input id="checkboxTrip" type="checkbox" name="checkbox"
+                                           th:value="${trip.getId()}"/></td>
+                            </tr>
+                        </th:block>
+                    </table>
                 </form>
 
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="submit" th:form="'tripsForm'+${card[0].getId()}" class="btn btn-light">Sign up to trips</button>
+                <button type="submit" th:form="'tripsForm'+${card[0].getId()}" class="btn btn-light">Sign up to trips
+                </button>
             </div>
         </div>
     </div>
 </div>
 
 
-<button th:if="${role} == 'ROLE_ADMIN'" th:fragment="modal_btn_admin" type="button" class="btn btn-light"
+<button th:if="${role} == 'ROLE_ADMIN'" th:fragment="modal_btn_admin" type="button" class="btn btn-info"
         data-toggle="modal"
         th:data-target="'#modal'+${card[0].getId()}+'adm'" style="margin: 5px;">
     Edit tour
 </button>
+<a th:if="${role} == 'ROLE_ADMIN'" th:href="'/trips?tourId='+${card[0].getId()}" th:fragment="btn_trips" target="_blank">
+    <button type="button" class="btn btn-light" style="margin: 5px;">
+        Edit trips
+    </button>
+</a>
 <div th:if="${role} == 'ROLE_ADMIN'" th:fragment="modal_admin" class="modal fade"
      th:id="'modal'+${card[0].getId()}+'adm'"
      data-backdrop="modal" data-keyboard="true" tabindex="-1"
@@ -154,9 +161,6 @@
                                        required/></td>
                         </tr>
                     </table>
-                    <a th:href="'/trips?tourId='+${card[0].getId()}">
-                        <button type="button">Edit trips</button>
-                    </a>
                 </div>
             </form>
             <div class="modal-footer">
