--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -21,7 +21,9 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink0">
                         <a th:if="${role} == 'ROLE_USER'" class="dropdown-item" href="/settings">Settings</a>
-                        <a th:if="${role} == 'ROLE_USER'" class="dropdown-item" href="/user-tours">My tours</a>
+                        <a th:if="${role} == 'ROLE_USER'" class="dropdown-item" href="/user_purchases">
+                            My trips
+                        </a>
                         <a class="dropdown-item" href="/logout">Logout</a>
                     </div>
                 </li>
