--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -20,36 +20,36 @@
                 <div class="form-row">
                     <div class="form-group col-md-6">
                         <label for="inputLogin">Your login</label>
-                        <input name="login" type="text" class="form-control" id="inputLogin" placeholder="Login">
+                        <input name="login" type="text" class="form-control" id="inputLogin" placeholder="Login" autocomplete="off">
                         <div style="color: red" th:text="${error_login_exists}"></div>
                     </div>
                     <div class="form-group col-md-6">
                         <label for="inputEmail">Your email</label>
-                        <input name="email" type="email" class="form-control" id="inputEmail" placeholder="Email">
+                        <input name="email" type="email" class="form-control" id="inputEmail" placeholder="Email" autocomplete="off">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="inputFirstName">First name</label>
                     <input name="firstName" type="text" class="form-control" id="inputFirstName"
-                           placeholder="First name">
+                           placeholder="First name" autocomplete="off">
                 </div>
                 <div class="form-group">
                     <label for="inputLastName">Last name</label>
-                    <input name="lastName" type="text" class="form-control" id="inputLastName" placeholder="Last name">
+                    <input name="lastName" type="text" class="form-control" id="inputLastName" placeholder="Last name" autocomplete="off">
                 </div>
                 <div class="form-group">
                     <label for="inputPhone">Your phone</label>
-                    <input name="phone" type="tel" class="form-control" id="inputPhone" placeholder="+7 XXX XXX XX XX">
+                    <input name="phone" type="tel" class="form-control" id="inputPhone" placeholder="+7 XXX XXX XX XX" autocomplete="off">
                 </div>
                 <div class="form-group">
                     <label for="inputPassword1">New password</label>
                     <input name="password" type="password" class="form-control" id="inputPassword1"
-                           placeholder="Password">
+                           placeholder="Password" autocomplete="off">
                 </div>
                 <div class="form-group">
                     <label for="inputPassword2">Same password</label>
                     <input type="password" class="form-control" id="inputPassword2" placeholder="Password"
-                           disabled="disabled">
+                           disabled="disabled" autocomplete="off">
                 </div>
                 <button id="submitBtn" type="submit" class="btn btn-success">Sign in</button>
                 <button id="returnBtn" type="button" class="btn btn-info">Return</button>
