--- a/src/main/resources/templates/settings.html
+++ b/src/main/resources/templates/settings.html
@@ -18,38 +18,47 @@
     <div class="row">
         <div class="col-md-3"></div>
         <div class="col-md-6" style="margin-top: 10vh">
-            <form action="" method="" th:object="${userCur}">
+            <form action="/settings" method="post" th:object="${userCur}" modelattribute="settingsForm">
                 <div class="form-row">
                     <div class="form-group col-md-6">
                         <label for="inputLogin">Login</label>
-                        <input th:field="*{login}" name="login" type="text" class="form-control" id="inputLogin" disabled="disabled">
+                        <input th:field="*{login}" name="login" type="text" class="form-control" id="inputLogin" disabled="disabled" required>
+                        <input name="id" th:value="*{id}" hidden>
+                        <span id="infoRedirect" hidden="hidden" style="font-size: 15px">
+                            If you'll change the login, you will be redirect to login page
+                        </span>
                     </div>
                     <div class="form-group col-md-6">
                         <label for="inputEmail">Email</label>
-                        <input th:field="*{email}" name="email" type="email" class="form-control" id="inputEmail" disabled="disabled">
+                        <input th:field="*{email}" name="email" type="email" class="form-control" id="inputEmail" disabled="disabled" required>
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="inputFirstName">First name</label>
-                    <input th:field="*{firstName}" name="firstName" type="text" class="form-control" id="inputFirstName" disabled="disabled">
+                    <input th:field="*{firstName}" name="firstName" type="text" class="form-control" id="inputFirstName" disabled="disabled" required>
                 </div>
                 <div class="form-group">
                     <label for="inputLastName">Last name</label>
-                    <input th:field="*{lastName}" name="lastName" type="text" class="form-control" id="inputLastName" disabled="disabled">
+                    <input th:field="*{lastName}" name="lastName" type="text" class="form-control" id="inputLastName" disabled="disabled" required>
                 </div>
                 <div class="form-group">
                     <label for="inputPhone">Phone</label> 
-                    <input th:field="*{phone}" name="phone" type="tel" class="form-control" id="inputPhone" disabled="disabled">
+                    <input th:field="*{phone}" name="phone" type="tel" class="form-control" id="inputPhone" disabled="disabled" required>
                 </div>
                 <div>
                     <button type="button" class="btn btn-info" id="dataBtn">Change data</button>
-                    <button type="button" class="btn btn-info" style="margin-left: 15px;" id="passBtn">Change password</button>
+                    <a href="/change-password" style="margin-left: 15px;"><button type="button" class="btn btn-info" id="passBtn">Change password</button></a>
+                    <a href="/" style="margin-left: 15px;"><button type="button" class="btn btn-light">Return</button></a>
                 </div>
-                <button type="submit" class="btn btn-success" style="margin-top: 15px;" id="submitBtn">Confirm</button>
+                <button type="submit" class="btn btn-success" style="margin-top: 15px;" id="submitBtn" disabled>Confirm</button>
             </form>
         </div>
         <div class="col-md-3"></div>
     </div>
+</div>
+
+<div th:if="${status} == success" class="pop-up">
+    Data is updated!
 </div>
 
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
@@ -61,7 +70,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
-<script src="/js/scriptSettings.js"></script>
+<script src="js/scriptSettings.js"></script>
 </body>
 
 </html>
