added tests, fixed typo

--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -16,34 +16,34 @@
         <div class="col-md-4">
         </div>
         <div class="col-md-4" style="margin-top: 5vh">
-            <form action="registration/proceed" method="post" modelAttribute="registrationForm">
+            <form th:object="${user}" th:action="@{/registration/proceed}" th:method="post">
                 <div class="form-row">
                     <div class="form-group col-md-6">
                         <label for="inputLogin">Your login</label>
-                        <input name="login" type="text" class="form-control" id="inputLogin" placeholder="Login" autocomplete="off">
+                        <input th:field="*{login}" type="text" class="form-control" id="inputLogin" placeholder="Login" autocomplete="off">
                         <div style="color: red" th:text="${error_login_exists}"></div>
                     </div>
                     <div class="form-group col-md-6">
                         <label for="inputEmail">Your email</label>
-                        <input name="email" type="email" class="form-control" id="inputEmail" placeholder="Email" autocomplete="off">
+                        <input th:field="*{email}" type="email" class="form-control" id="inputEmail" placeholder="Email" autocomplete="off">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="inputFirstName">First name</label>
-                    <input name="firstName" type="text" class="form-control" id="inputFirstName"
+                    <input th:field="*{firstName}" type="text" class="form-control" id="inputFirstName"
                            placeholder="First name" autocomplete="off">
                 </div>
                 <div class="form-group">
                     <label for="inputLastName">Last name</label>
-                    <input name="lastName" type="text" class="form-control" id="inputLastName" placeholder="Last name" autocomplete="off">
+                    <input th:field="*{lastName}" type="text" class="form-control" id="inputLastName" placeholder="Last name" autocomplete="off">
                 </div>
                 <div class="form-group">
                     <label for="inputPhone">Your phone</label>
-                    <input name="phone" type="tel" class="form-control" id="inputPhone" placeholder="+7 XXX XXX XX XX" autocomplete="off">
+                    <input th:field="*{phone}" type="tel" class="form-control" id="inputPhone" placeholder="+7 XXX XXX XX XX" autocomplete="off">
                 </div>
                 <div class="form-group">
                     <label for="inputPassword1">New password</label>
-                    <input name="password" type="password" class="form-control" id="inputPassword1"
+                    <input th:field="*{password}" type="password" class="form-control" id="inputPassword1"
                            placeholder="Password" autocomplete="off">
                 </div>
                 <div class="form-group">
