--- a/src/main/resources/templates/change_password.html
+++ b/src/main/resources/templates/change_password.html
@@ -4,28 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="/css/css.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    <link rel="stylesheet" th:href="@{/css/css.css}">
+    <link rel="stylesheet" th:href="@{https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css}"
           crossorigin="anonymous">
     <title>Change password</title>
 </head>
 <body>
 <div th:replace="fragments :: nav_full"></div>
+
 <div style="margin-right: 2vw; margin-left: 2vw; margin-top: 20vh">
     <div class="row">
         <div class="col-md-4">
         </div>
         <div class="col-md-4" >
-            <form action="/change-password" method="post" modelAttribute="changePasswordForm">
+            <form th:action="@{/change-password}" th:method="post" th:object="${userDto}">
                 <div class="form-group">
                     <label for="inputPassword">Old password</label>
-                    <input name="oldPass" type="password" class="form-control" id="inputPassword"
+                    <input th:field="*{oldPass}" type="password" class="form-control" id="inputPassword"
                            placeholder="Password" autocomplete="off">
-                    <input th:value="${id}" name="id" hidden>
+                    <input th:field="*{id}" name="id" hidden>
                 </div>
                 <div class="form-group">
                     <label for="inputPassword1">New password</label>
-                    <input name="newPass" type="password" class="form-control" id="inputPassword1"
+                    <input th:field="*{newPass}" type="password" class="form-control" id="inputPassword1"
                            placeholder="Password" autocomplete="off">
                 </div>
                 <div class="form-group">
@@ -65,8 +66,6 @@
             window.location.reload();
         }
     })
-
-
 </script>
 </body>
 </html>
